--- a/app/src/main/res/layout/activity_create_new_route.xml
+++ b/app/src/main/res/layout/activity_create_new_route.xml
@@ -14,7 +14,7 @@
             android:layout_gravity="bottom|center"
             android:text="Finalizar"/>
     <fragment
-            android:id="@+id/map"
+            android:id="@+id/new_route_map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
