--- a/app/src/main/res/layout/activity_main_map.xml
+++ b/app/src/main/res/layout/activity_main_map.xml
@@ -15,7 +15,7 @@
 
     <fragment
             xmlns:tools="http://schemas.android.com/tools"
-              android:id="@+id/map"
+              android:id="@+id/main_map"
               android:name="com.google.android.gms.maps.SupportMapFragment"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
