--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,14 @@
             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="1dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
+    <Switch
+            android:text="Switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/switch1" tools:ignore="MissingConstraints"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="299dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="164dp"
+            android:layout_marginStart="164dp" android:layout_marginTop="43dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="165dp" android:layout_marginRight="165dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
