Borrado archivo Geometrics.jpg y actualizadas referencias a drawable

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LogInActivity"
-    android:background="@drawable/geometrics">
+    android:background="@drawable/geometrics_cut">
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
