--- a/app/src/main/res/layout/activity_create_new_route.xml
+++ b/app/src/main/res/layout/activity_create_new_route.xml
@@ -7,7 +7,7 @@
         tools:context=".CreateNewRouteActivity">
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/extended_fab"
+            android:id="@+id/finalize_route_creation_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
@@ -20,13 +20,14 @@
             android:layout_height="match_parent"
             tools:context=".MainMapActivity"/>
     <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textField"
+            android:id="@+id/route_name_textField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:hint="Nombre de la ruta" android:gravity="center">
 
         <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/route_name_textInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
         />
