--- a/app/src/main/res/layout/activity_main_map.xml
+++ b/app/src/main/res/layout/activity_main_map.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent">
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/extended_fab"
+            android:id="@+id/create_new_route_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
