--- a/app/src/main/res/layout/activity_create_new_route.xml
+++ b/app/src/main/res/layout/activity_create_new_route.xml
@@ -34,10 +34,13 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <ListView
-        android:id="@+id/markedPOIs_listView"
-        android:layout_width="130dp"
-        android:layout_height="360dp"
-        android:layout_marginStart="10pt"
-        android:layout_marginLeft="10pt"
-        android:layout_marginTop="40pt" />
+        android:id="@+id/marked_pois_list_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5pt"
+        android:layout_marginLeft="5pt"
+        android:layout_marginTop="40pt"
+        android:layout_marginEnd="130pt"
+        android:layout_marginRight="130pt"
+        android:background="#FFFFFF" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
