Añadido color a la lista de rutas creadas

--- a/app/src/main/res/layout/activity_main_map.xml
+++ b/app/src/main/res/layout/activity_main_map.xml
@@ -24,6 +24,7 @@
     <ListView
         android:id="@+id/created_routes_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
