añadido array que se usará para enviar las rutas entre 2 fragmentos

--- a/app/src/main/res/navigation/route_search_nav_graph.xml
+++ b/app/src/main/res/navigation/route_search_nav_graph.xml
@@ -23,5 +23,8 @@
         <action
             android:id="@+id/action_RouteListFragment_to_SearchFragment"
             app:destination="@id/SearchFragment" />
+        <argument
+            android:name="filteredList"
+            app:argType="app.paseico.data.Route[]" />
     </fragment>
 </navigation>
