--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -24,10 +24,10 @@
         android:text="@string/search_fragment_title"
         app:layout_constraintBottom_toTopOf="@id/btn_search"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.43"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.089" />
+        app:layout_constraintVertical_bias="0.093" />
 
     <EditText
         android:id="@+id/editText_keyWord"
@@ -37,7 +37,7 @@
         android:layout_marginRight="32dp"
         android:layout_marginTop="36dp"
         android:ems="10"
-        android:hint="Nombre de la ruta"
+        android:hint="@string/route_name_hint"
         android:inputType="textPersonName"
         android:selectAllOnFocus="false"
         app:layout_constraintBottom_toBottomOf="@+id/textView_keyWord"
@@ -139,8 +139,8 @@
 
     <EditText
         android:id="@+id/editText_minimumNumberOfPOI"
-        android:layout_width="123dp"
-        android:layout_height="37dp"
+        android:layout_width="126dp"
+        android:layout_height="40dp"
         android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="40dp"
@@ -148,6 +148,7 @@
         android:focusableInTouchMode="true"
         android:inputType="number"
         android:nextFocusDown="@id/spinner_route_theme"
+        android:text="@string/zero"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textview_minNumOfPOI"
@@ -166,11 +167,12 @@
 
     <EditText
         android:id="@+id/editText_minimumOfPoints"
-        android:layout_width="128dp"
-        android:layout_height="33dp"
+        android:layout_width="137dp"
+        android:layout_height="42dp"
         android:layout_marginTop="28dp"
         android:ems="10"
         android:inputType="number"
+        android:text="@string/zero"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.391"
         app:layout_constraintStart_toEndOf="@+id/textView_pointsEarnedCompletingRoute"
@@ -199,14 +201,5 @@
         app:layout_constraintStart_toEndOf="@+id/spinner_route_estimated_time"
         app:layout_constraintTop_toTopOf="@+id/spinner_route_estimated_time"
         app:layout_constraintVertical_bias="1.0" />
-
-    <Spinner
-        android:id="@+id/spinner_filter"
-        android:layout_width="155dp"
-        android:layout_height="32dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView_routeSearchTitle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView_routeSearchTitle"
-        app:layout_constraintTop_toTopOf="@+id/textView_routeSearchTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
