--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,10 +42,11 @@
 
     <ImageButton
         android:id="@+id/buttonCancelRoute"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/abc_vector_test"
+        android:layout_width="43dp"
+        android:layout_height="39dp"
+        android:src="@android:drawable/ic_delete"
         tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="8dp" />
+        tools:layout_editor_absoluteY="8dp"
+        tools:src="@android:drawable/ic_delete" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
