--- a/app/src/main/res/layout/activity_main_map.xml
+++ b/app/src/main/res/layout/activity_main_map.xml
@@ -10,8 +10,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:layout_gravity="bottom|center"
+            android:layout_gravity="bottom|left"
             android:text="Nueva Ruta"/>
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/route_search_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_gravity="bottom|right"
+            android:text="Buscar ruta"/>
 
     <fragment
             xmlns:tools="http://schemas.android.com/tools"
