--- a/app/src/main/res/layout/activity_route_runner.xml
+++ b/app/src/main/res/layout/activity_route_runner.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".RouteRunnerActivity">
 
     <fragment
         android:id="@+id/map"
@@ -48,5 +47,4 @@
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="8dp"
         tools:src="@android:drawable/ic_delete" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
