--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".MainMenuActivity">
 
     <!-- Added temporal material design component to test that dependencies are correctly resolved. -->
     <com.google.android.material.appbar.AppBarLayout
