--- a/app/src/main/res/layout/activity_route_runner.xml
+++ b/app/src/main/res/layout/activity_route_runner.xml
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewTitleRoutingActivity"
-        tools:context=".MainActivity" />
+        tools:context=".MainMenuActivity" />
 
 
 
