--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="navigation_view">
+      xmlns:tools="http://schemas.android.com/tools"
+      tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_profile"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_profile" />
+                android:id="@+id/nav_profile"
+                android:icon="@drawable/ic_menu_camera"
+                android:title="@string/menu_profile"/>
         <item
-            android:id="@+id/nav_routes"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_routes" />
+                android:id="@+id/nav_create_new_route"
+                android:icon="@drawable/ic_menu_gallery"
+                android:title="Crear Nueva Ruta"/>
         <item
-            android:id="@+id/nav_searcher"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_searcher" />
+                android:id="@+id/nav_routes"
+                android:icon="@drawable/ic_menu_gallery"
+                android:title="@string/menu_routes"/>
         <item
-            android:id="@+id/nav_marketplace"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_marketplace" />
+                android:id="@+id/nav_searcher"
+                android:icon="@drawable/ic_menu_slideshow"
+                android:title="@string/menu_searcher"/>
+        <item
+                android:id="@+id/nav_marketplace"
+                android:icon="@drawable/ic_menu_slideshow"
+                android:title="@string/menu_marketplace"/>
     </group>
 </menu>
