--- a/app/src/main/res/layout/activity_opening.xml
+++ b/app/src/main/res/layout/activity_opening.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
-        tools:context=".OpeningActivity"
+        tools:context=".login.OpeningActivity"
         android:background="@drawable/geometrics_cut">
 
     <TextView
