--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/nav_routes"
-        android:name="app.paseico.ui.routes.GalleryFragment"
+        android:name="app.paseico.ui.routes.RoutesFragment"
         android:label="@string/menu_routes"
         tools:layout="@layout/fragment_routes" />
 
