--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,10 @@
         android:name="app.paseico.ui.searcher.SlideshowFragment"
         android:label="@string/menu_searcher"
         tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_marketplace"
+        android:name="app.paseico.ui.marketplace.marketplaceFragment"
+        android:label="@string/menu_searcher"
+        tools:layout="@layout/fragment_marketplace" />
 </navigation>
